<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_createwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hinatazaka"
    tools:context=".view.word.WordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/screen_id7"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp"/>

        <TextView
            android:id="@+id/wd_front"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wd_front"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/wd_front_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_frame"
            android:ems="10"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/colorOriginalBlue"
            android:textColorLink="@color/colorOriginalBlue" />

        <TextView
            android:id="@+id/wd_rear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wd_rear"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/wd_rear_input"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/border_frame"
            android:ems="10"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/colorOriginalBlue"
            android:textColorLink="@color/colorOriginalBlue" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="46dp"/>

        <TextView
            android:id="@+id/wd_errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="46dp"
            android:text=""
            android:textColor="@color/red"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/wd_create"
                android:background="@drawable/shape_rounded_corners_5dp"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:text="@string/create"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/wd_cancel"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_weight="3"
                android:text="@string/cancel"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>